[metadata]
name = exacthgm-lauziere
version = 1.0
author = Andrew Lauziere
author_email = lauziere@umd.edu
description = Python3 implementation of "An Exact Hypergraph Matching Algorithm for Nuclear Identification in Embryonic Caenorhabditis elegans"
long_description = file: README.md
url = https://github.com/lauziere/exacthgm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent